RESOLVED FIXED203582
REGRESSION (r251693): [iOS] Unable to change selection in a focused element if the element's bounds change
https://bugs.webkit.org/show_bug.cgi?id=203582
Summary REGRESSION (r251693): [iOS] Unable to change selection in a focused element i...
Wenson Hsieh
Reported 2019-10-29 13:14:43 PDT
SSIA
Attachments
Patch (11.78 KB, patch)
2019-10-29 13:35 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2019-10-29 13:35:05 PDT
WebKit Commit Bot
Comment 2 2019-10-29 19:48:53 PDT
Comment on attachment 382216 [details] Patch Clearing flags on attachment: 382216 Committed r251761: <https://trac.webkit.org/changeset/251761>
WebKit Commit Bot
Comment 3 2019-10-29 19:48:54 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.